# sled

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
crates/sled-ai/: Cargo.toml
crates/sled-ai/src/: anthropic.rs  http.rs  lib.rs  openai.rs  openai_compatible.rs  operator.rs  options.rs  provider.rs  reply.rs  tests.rs
crates/sled-ai/src/providers/: anthropic.rs  mod.rs  openai.rs  openai_compatible.rs
crates/sled-ai/src/tests/: http.rs  mod.rs  model.rs  options.rs  reply.rs
crates/sled-ai/src/tests/providers/: anthropic.rs  mod.rs  openai.rs  openai_compatible.rs
crates/sled-cli/: Cargo.toml
crates/sled-cli/examples/: custom_profile.rs
crates/sled-cli/src/: args.rs  compact.rs  config.rs  fold.rs  init.rs  lib.rs  logging.rs  main.rs  profile.rs  run.rs  tests.rs
crates/sled-cli/src/tests/: config.rs  mod.rs  support.rs
crates/sled-compact/: Cargo.toml
crates/sled-compact/src/: lib.rs
crates/sled-compact/src/prompts/: compact.md
crates/sled-core/: Cargo.toml
crates/sled-core/src/: lib.rs  model_input.rs  runner.rs  say.rs  status.rs  storage.rs  system.rs  tests.rs  types.rs
crates/sled-core/src/prompts/: context_format.md  system.md
crates/sled-core/src/tests/: mod.rs  model_input.rs  runner.rs  say.rs  storage.rs  support.rs  system.rs
crates/sled-fold/: Cargo.toml
crates/sled-fold/src/: all.rs  assemble.rs  lib.rs  pipeline.rs  recent_bytes.rs  recent_messages.rs  recent_tokens.rs  rows.rs  tests.rs
crates/sled-fold/src/tests/: all.rs  mod.rs  recent_bytes.rs  recent_messages.rs  recent_tokens.rs  support.rs
crates/sled-tools/: Cargo.toml
crates/sled-tools/src/: archive.rs  escalate.rs  http_get.rs  lib.rs  open.rs  read.rs  registry.rs
crates/sled-tools/src/tests/: archive.rs  http_get.rs  mod.rs  registry.rs
prompts/: context_format.md  reply_protocol.md  system.md
