[workspace]
members = [
    "crates/sled-core",
    "crates/sled-fold",
    "crates/sled-ai",
    "crates/sled-tools",
    "crates/sled-compact",
    "crates/sled-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
json5 = "1.3.1"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
