[package]
name = "sled-ai"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde_json.workspace = true
sled-core = { path = "../sled-core" }
tokio.workspace = true
tracing.workspace = true
