[package]
name = "sled-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "sled"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
json5.workspace = true
serde.workspace = true
serde_json.workspace = true
sled-ai = { path = "../sled-ai" }
sled-compact = { path = "../sled-compact" }
sled-core = { path = "../sled-core" }
sled-fold = { path = "../sled-fold" }
sled-tools = { path = "../sled-tools" }
tokio.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
async-trait.workspace = true
