[package]
name = "sled-compact"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
sled-core = { path = "../sled-core" }

[dev-dependencies]
async-trait.workspace = true
tokio.workspace = true
